--- a/rpc-xsd/pom.xml
+++ b/rpc-xsd/pom.xml
@@ -15,11 +15,7 @@
     <description>自定义XML标签</description>
 
     <dependencies>
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-        </dependency>
+        <!--spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
