--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.knagyonggan</groupId>
+    <groupId>com.kangyonggan</groupId>
     <artifactId>rpc</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -14,7 +14,7 @@
 
     <modules>
         <module>rpc-provider</module>
-        <module>rpc-xsd</module>
+        <module>rpc-core</module>
     </modules>
 
     <properties>
@@ -23,6 +23,7 @@
         <plugin.compiler.version>3.2</plugin.compiler.version>
         <plugin.surefire.version>2.18.1</plugin.surefire.version>
         <zookeeper.version>3.4.13</zookeeper.version>
+        <netty.version>4.1.33.Final</netty.version>
         <spring.version>4.2.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
@@ -62,7 +63,7 @@
             <!--self-->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>rpc-xsd</artifactId>
+                <artifactId>rpc-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -88,6 +89,13 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
+            </dependency>
+
+            <!--netty-->
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
 
             <!-- log4j -->
