--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>rpc</artifactId>
-        <groupId>com.knagyonggan</groupId>
+        <groupId>com.kangyonggan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rpc-xsd</artifactId>
+    <artifactId>rpc-core</artifactId>
 
-    <name>RPC XSD</name>
-    <description>自定义XML标签</description>
+    <name>RPC CORE</name>
+    <description>RPC核心</description>
 
     <build>
         <plugins>
@@ -40,6 +40,12 @@
             <artifactId>spring-context</artifactId>
         </dependency>
 
+        <!--netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+
         <!-- log4j -->
         <dependency>
             <groupId>log4j</groupId>
@@ -52,6 +58,7 @@
             <artifactId>junit</artifactId>
         </dependency>
 
+        <!--other-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
