--- a/rpc-provider/pom.xml
+++ b/rpc-provider/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>rpc</artifactId>
-        <groupId>com.knagyonggan</groupId>
+        <groupId>com.kangyonggan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
         <!--self-->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>rpc-xsd</artifactId>
+            <artifactId>rpc-core</artifactId>
         </dependency>
 
         <!--zookeeper-->
