--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <plugin.compiler.version>3.2</plugin.compiler.version>
         <plugin.surefire.version>2.18.1</plugin.surefire.version>
         <zookeeper.version>3.4.13</zookeeper.version>
+        <zkclient.version>0.1</zkclient.version>
         <netty.version>4.1.33.Final</netty.version>
         <spring.version>4.2.6.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
@@ -89,6 +90,13 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
+            </dependency>
+
+            <!--zkClient-->
+            <dependency>
+                <groupId>com.github.sgroschupf</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
             </dependency>
 
             <!--netty-->
