--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -40,6 +40,18 @@
             <artifactId>spring-context</artifactId>
         </dependency>
 
+        <!--zookeeper-->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+
+        <!--zkClient-->
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+        </dependency>
+
         <!--netty-->
         <dependency>
             <groupId>io.netty</groupId>
